# Gosh-Transfer

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  PRD.md  README.md  index.html  package-lock.json  package.json  svelte.config.js  technical_spec.md  vite.config.js
.github/workflows/: build-flatpak.yml  build-linux.yml  build-macos.yml  build-windows.yml
src/: App.svelte  main.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app.json
src-tauri/src/: client.rs  commands.rs  favorites.rs  history.rs  lib.rs  main.rs  server.rs  settings.rs  types.rs
src/lib/: theme.js
src/lib/components/: AboutView.svelte  ReceiveView.svelte  SendView.svelte  SettingsView.svelte  TransfersView.svelte
src/styles/: global.css
