[package]
name = "gosh-transfer"
version = "2.0.3"
description = "A clean, explicit file transfer application"
authors = ["Gosh Contributors"]
license = "AGPL-3.0"
repository = "https://github.com/your-org/gosh-transfer"
edition = "2021"

# LEGAL NOTICE:
# This project is NOT affiliated with Motrix or any other download manager.
# This is an independent, open-source project licensed under AGPL-3.0.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Transfer engine (provides HTTP server/client, networking, file transfer)
gosh-lan-transfer = { git = "https://github.com/goshitsarch-eng/gosh-lan-transfer" }

# Tauri framework
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
hostname = "0.4"

# Platform detection
tauri-plugin-os = "2"

# Platform-specific window effects
[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
window-vibrancy = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
